# nixops-packet

./: default.nix  overrides.nix  pyproject.toml  release.nix  shell.nix
nixops_packet/: plugin.py
nixops_packet/backends/: device.py
nixops_packet/nix/: packet-keypair.nix  packet.nix
nixops_packet/parser/: parse_defs.py
nixops_packet/resources/: keypair.py
nixopspacket/: plugin.py
nixopspacket/backends/: device.py
nixopspacket/parser/: parse_defs.py
nixopspacket/resources/: keypair.py
